# tempolocus

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
samples/: weekfull-chan1.json  year-chan1.json  year.json
tempolocus/: __init__.py  cli.py  core.py
tests/: test_tempolocus.py
