[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tempolocus"
version = "1.0.0"
description = "Guess likely timezone or region from temporal JSON activity."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "tempolocus contributors"}]
dependencies = []

[project.scripts]
tempolocus = "tempolocus.cli:main"

[tool.setuptools.packages.find]
include = ["tempolocus*"]
